--- a/views/top.haml
+++ b/views/top.haml
@@ -1,3 +1,4 @@
+<meta content='width=320, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport'>
 %title GDrive Media Server
 %iframe(allowfullscreen)
 %div.center
