--- a/views/files.haml
+++ b/views/files.haml
@@ -15,9 +15,9 @@
   %ul
     -@files.each do |file|
       %li.media
-        %span.new.notnew{id: "new_#{file[:id]}"} New
-        %a.files{id: file[:id], href: "javascript:void(0)", "data-link"=> embed(file[:embed_link])}=file[:original_filename]
-        %span.weak.timestamp=file[:created_date].to_time.to_i*1000
+        %span.new.notnew{id: "new_#{file.id}"} New
+        %a.files{id: file.id, href: "javascript:void(0)", "data-link"=> embed(file)}=file.name
+        %span.weak.timestamp=file.created_time.to_time.to_i*1000
         %span.info=media_info(file)
   -if @next_page_token
     %div
