--- a/views/files.haml
+++ b/views/files.haml
@@ -1,5 +1,76 @@
 <meta content='width=320, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport'>
 %title GDrive Media Server
+:javascript
+  if(location.hostname === 'gdrive-media-server.ssig33.com' && location.protocol === 'http:'){ location.protocol = 'https'}
+:css
+  iframe{
+    width: 100%;
+    height: 100%;
+    display:none;
+  }
+
+  .new{
+    color:lightgreen;
+    font-weight:bold;
+  }
+  .notnew{
+    color:black;
+  }
+
+  .center{
+    text-align:center;
+  }
+  
+  .search {
+    background-color:black;
+    color:white;
+  }
+
+  #close{
+    font-size:xx-large;
+    border-radius:10px;
+    padding: 15px 40px;
+    margin: 30px;
+    background:red;
+    color:white;
+    display:none;
+  }
+  html,body{
+    background: black;
+    color:white;
+  }
+  ul{
+    padding: 0;
+  }
+  a{
+    color:white;
+  }
+  .weak{
+    color:lightgrey;
+    font-size:small;
+  }
+  .info{
+    color:mistyrose;
+    font-size:small;
+  }
+  .media{
+    padding-top: 6px;
+    padding-bottom: 6px;
+    list-style:none;
+    font-size:large;
+    border-bottom: solid 1px grey;
+  }
+  .media a{
+    text-decoration:none;
+  }
+  #content{
+    max-width: 1400px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+  }
+  
+
 %iframe(allowfullscreen)
 %div.center
   %h2#title
@@ -75,72 +146,4 @@
     n.innerHTML = str;
   });
 
-:css
-  iframe{
-    width: 100%;
-    height: 100%;
-    display:none;
-  }
-
-  .new{
-    color:lightgreen;
-    font-weight:bold;
-  }
-  .notnew{
-    color:black;
-  }
-
-  .center{
-    text-align:center;
-  }
-  
-  .search {
-    background-color:black;
-    color:white;
-  }
-
-  #close{
-    font-size:xx-large;
-    border-radius:10px;
-    padding: 15px 40px;
-    margin: 30px;
-    background:red;
-    color:white;
-    display:none;
-  }
-  html,body{
-    background: black;
-    color:white;
-  }
-  ul{
-    padding: 0;
-  }
-  a{
-    color:white;
-  }
-  .weak{
-    color:lightgrey;
-    font-size:small;
-  }
-  .info{
-    color:mistyrose;
-    font-size:small;
-  }
-  .media{
-    padding-top: 6px;
-    padding-bottom: 6px;
-    list-style:none;
-    font-size:large;
-    border-bottom: solid 1px grey;
-  }
-  .media a{
-    text-decoration:none;
-  }
-  #content{
-    max-width: 1400px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-  }
-  
 
