--- a/views/files.haml
+++ b/views/files.haml
@@ -1,76 +1,8 @@
 <meta content='width=320, initial-scale=1.0, maximum-scale=1.0, user-scalable=no' name='viewport'>
 %title GDrive Media Server
-:javascript
-  if(location.hostname === 'gdrive-media-server.ssig33.com' && location.protocol === 'http:'){ location.protocol = 'https'}
 :css
-  iframe{
-    width: 100%;
-    height: 100%;
-    display:none;
-  }
-
-  .new{
-    color:lightgreen;
-    font-weight:bold;
-  }
-  .notnew{
-    color:black;
-  }
-
-  .center{
-    text-align:center;
-  }
+  iframe{ width: 100%; height: 100%; display:none; } .new{ color:lightgreen; font-weight:bold; } .notnew{ color:black; } .center{ text-align:center; } .search { background-color:black; color:white; } #close{ font-size:xx-large; border-radius:10px; padding: 15px 40px; margin: 30px; background:red; color:white; display:none; } html,body{ background: black; color:white; } ul{ padding: 0; } a{ color:white; } .weak{ color:lightgrey; font-size:small; } .info{ color:mistyrose; font-size:small; } .media{ padding-top: 6px; padding-bottom: 6px; list-style:none; font-size:large; border-bottom: solid 1px grey; } .media a{ text-decoration:none; } #content{ max-width: 1400px; margin-left: auto; margin-right: auto; text-align: left; }
   
-  .search {
-    background-color:black;
-    color:white;
-  }
-
-  #close{
-    font-size:xx-large;
-    border-radius:10px;
-    padding: 15px 40px;
-    margin: 30px;
-    background:red;
-    color:white;
-    display:none;
-  }
-  html,body{
-    background: black;
-    color:white;
-  }
-  ul{
-    padding: 0;
-  }
-  a{
-    color:white;
-  }
-  .weak{
-    color:lightgrey;
-    font-size:small;
-  }
-  .info{
-    color:mistyrose;
-    font-size:small;
-  }
-  .media{
-    padding-top: 6px;
-    padding-bottom: 6px;
-    list-style:none;
-    font-size:large;
-    border-bottom: solid 1px grey;
-  }
-  .media a{
-    text-decoration:none;
-  }
-  #content{
-    max-width: 1400px;
-    margin-left: auto;
-    margin-right: auto;
-    text-align: left;
-  }
-  
-
 %iframe(allowfullscreen)
 %div.center
   %h2#title
@@ -85,7 +17,7 @@
     %button.search Search
   %ul
     -@files.each do |file|
-      - if mobile?
+      -# if mobile?
         %li.media
           %a{href: file.web_view_link}=file.name
           %span.weak.timestamp=file.created_time.to_time.to_i*1000
@@ -93,7 +25,7 @@
       - else
         %li.media
           %span.new.notnew{id: "new_#{file.id}"} New
-          %a.files{id: file.id, href: "javascript:void(0)", "data-link"=> embed(file)}=file.name
+          %a.files{id: file.id, href: file.web_view_link, "data-link"=> embed(file)}=file.name
           %span.weak.timestamp=file.created_time.to_time.to_i*1000
           %span.info=media_info(file)
   -if @next_page_token
@@ -128,16 +60,20 @@
     e.target.style.display = 'none';
     document.querySelector('#title').textContent = '';
   });
-  
-   Array.prototype.slice.call(document.querySelectorAll("a.files"),0).forEach((n)=>{
-    n.addEventListener("click", (e)=>{  
-      const iframe = document.querySelector('iframe');
-      iframe.src = e.target.dataset.link;
-      iframe.style.display = "block";
-      document.querySelector('#close').style.display = 'inline';
-      document.querySelector('#title').textContent = e.target.textContent;
-      watched(e.target.id);
-    });
+    
+  const mobile = "ontouchend" in document 
+  Array.prototype.slice.call(document.querySelectorAll("a.files"),0).forEach((n)=>{
+    if(!mobile){
+      n.addEventListener("click", (e)=>{  
+        e.preventDefault();
+        const iframe = document.querySelector('iframe');
+        iframe.src = e.target.dataset.link;
+        iframe.style.display = "block";
+        document.querySelector('#close').style.display = 'inline';
+        document.querySelector('#title').textContent = e.target.textContent;
+        watched(e.target.id);
+      });
+    }
   });
   Array.prototype.slice.call(document.querySelectorAll('.timestamp'),0).forEach((n)=>{
     const str = String(new Date(parseInt(n.textContent))).replace(/GMT....../, '');
