--- a/views/files.haml
+++ b/views/files.haml
@@ -17,17 +17,11 @@
     %button.search Search
   %ul
     -@files.each do |file|
-      -# if mobile?
-        %li.media
-          %a{href: file.web_view_link}=file.name
-          %span.weak.timestamp=file.created_time.to_time.to_i*1000
-          %span.info=media_info(file)
-      - else
-        %li.media
-          %span.new.notnew{id: "new_#{file.id}"} New
-          %a.files{id: file.id, href: file.web_view_link, "data-link"=> embed(file)}=file.name
-          %span.weak.timestamp=file.created_time.to_time.to_i*1000
-          %span.info=media_info(file)
+      %li.media
+        %span.new.notnew{id: "new_#{file.id}"} New
+        %a.files{id: file.id, href: file.web_view_link, "data-link"=> embed(file)}=file.name
+        %span.weak.timestamp=file.created_time.to_time.to_i*1000
+        %span.info=media_info(file)
   -if @next_page_token
     %div
       %a{rel: "next", href: next_page()} Next
@@ -72,6 +66,12 @@
         document.querySelector('#close').style.display = 'inline';
         document.querySelector('#title').textContent = e.target.textContent;
         watched(e.target.id);
+      });
+    } else {
+      n.addEventListener("click", async (e)=>{  
+        e.preventDefault();
+        await watched(e.target.id);
+        window.open(e.target.href);
       });
     }
   });
